--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,15 @@ h2{
   background-color: #F9DC5C;
   color: #2D2A32;
 }
+
+
+
+.bottom-info{
+  background-color: #F9DC5C;
+  color: #2D2A32;
+}
+
+.bottom-info{
+  background-color: #F9DC5C;
+  color: #2D2A32;
+}
